@@ -14,16 +14,21 @@
 # 'port' is the port the server should listen for queries
 # port = 1111
 
-# 'stat_level' is the name of the requested statistic. There can be multiple
-# 'stat_level' options in the configuration file (Using both none and full is
+# 'protocol' activates the server protocols grossd will support
+# Valid protocols are 'sjsms' and 'postfix'
+protocol = sjsms
+protocol = postfix
+
+# 'stat_type' is the name of the requested statistic. There can be multiple
+# 'stat_type' options in the configuration file (Using both none and full is
 # undefined). Default is none. Valid options are currently:
 # full: grossd sends all possible statistics
 # none: no statistics at all
 # status: basic statistics set
 # since_startup: basic set since the startup 
 # delay: processing delay statistics
-stat_level = status
-stat_level = delay
+# stat_type = status
+# stat_type = delay
 
 # 'stat_interval' is the number of seconds between status log entries
 # stat_interval = 3600
@@ -71,11 +76,15 @@ stat_level = delay
 # like a.b.c.d as a.b.c.0.
 # grey_mask = 0
 
+# 'grey_delay' is the time in seconds new triplets are kept on the greylist.
+# grey_delay = 10
+
 # 'check' lists all the checks grossd will do to judge if client_ip is
 # suspicious or not. 'dnsbl' is the only implemented check.
 # check = dnsbl
 
 # 'dnsbl' is a dns domain name of the dnsbl that 'dnsbl' check will query
+# There are no defaults, but below is a list of dnsbls you could be using
 dnsbl = bl.spamcop.net 
 dnsbl = sbl.spamhaus.org
 dnsbl = dnsbl.njabl.org
