@@ -1,10 +1,21 @@
 Version svn
 
+Lots of changes under the hood.
+
+- Checks are now done in thread pools, which makes it easier to
+  develop new checks, like Sophos blocker or SPF. 
+- grossd can log aggregate statistics about query results. Check
+  'stat_type' and 'stat_interval' configuration parameters.
+- grossd can now serve different query protocols simultaneously.
+  This is controlled by the 'protocol' config parameter.
+
 Issues fixed:
 #23: Customizable SMTP error messages
 #26: connections could come from different IP addresses
+#27: configurable greylisting time
 #28: Bug in the mapping file example
 #29: dnsbl tolerance counters not working on OS X
+#31: Get rid of --with-worker configure option
 
 Version 0.7.2
 
